--- a/views/recettes/detail.pug
+++ b/views/recettes/detail.pug
@@ -55,10 +55,10 @@ block content
 
     div
       h2 Total
-      -var totalA = recette.aromes.reduce(function(accumulateur, arome) { return accumulateur + arome.pourcentage }, 0)
+      -const totalA = recette.aromes.reduce(function(accumulateur, arome) { return accumulateur + arome.pourcentage }, 0)
       span= totalA
       span % d'arômes pour un dosage de 
-      -var totalN = recette.bases.reduce(function(accumulateur, base) { return accumulateur + base.pourcentage * base.nicotine / 100 }, 0)
+      -const totalN = recette.bases.reduce(function(accumulateur, base) { return accumulateur + base.pourcentage * base.nicotine / 100 }, 0)
       span= totalN
       span mg de nicotine
 
