Cleans the Recette route - Removes Comment route (it's in a separate service) - Service methods are more atomic - Separation of update and post - Routes are more obvious from the start (moved to the top) - Routes are a bit more "RESTful-ish"

--- a/views/admin/recettes.pug
+++ b/views/admin/recettes.pug
@@ -20,4 +20,4 @@ block content
           td
             a(href='/admin/delete/recette/' + recette._id) Supprimer
           td
-            a(href='/recette/' + recette._id + '/edit') Modifier
+            a(href='/recette/' + recette._id + '?mode=edit') Modifier
