--- a/views/recettes/my.pug
+++ b/views/recettes/my.pug
@@ -35,4 +35,4 @@ block content
                   span.minus 5
   else
     h3 Vous n'avez soumis aucune recette pour le moment. :'-(
-    a(href='/recette/new/edit') Créez-en une !
+    a(href='/recette') Créez-en une !
