--- a/views/site/menu.pug
+++ b/views/site/menu.pug
@@ -27,7 +27,7 @@ nav
         li
           a(href='/recettes/all/1') Toutes les recettes
         li
-          a(href='/recette/new') Nouvelle recette
+          a(href='/recette/') Nouvelle recette
         if (user)
           li
             a(href='/recettes/search/auteur/' + user.local.pseudo) Mes recettes
