--- a/public/stylesheets/recette-new.css
+++ b/public/stylesheets/recette-new.css
@@ -1,14 +1,74 @@
-div.recette {
+.recette {
+  padding: 0 20px;
+}
+
+.recette-title {
+  margin: 0;
+}
+
+.recette-actions {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.recette-action {
+  display: block;
+  margin: auto;
+  padding: 5px;
+  width: 50%;
+}
+
+.recette-action > * {
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.recette-action > * > div {
+  display: flex;
+  padding: 12px 0;
+}
+
+.recette-action > * > div > i {
+  margin: auto;
+}
+
+.recette-details {
   border-left: 2px dashed #ccc;
   padding-left: 30px;
   text-align: left;
   width: 100%;
 }
 
-.recette-maturation {
+.recette ul > li {
+  margin: 5px 0;
+}
+
+ul.comments {
+  list-style: none;
+  padding: 0;
+}
+
+.comments > li {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
+}
+
+.comment-title {
+  margin-bottom: 8px;
+}
+
+.recette-informations-maturation {
   display: flex;
 }
-.recette-maturation > span {
+
+.recette-informations-maturation > span {
   padding-top: 2px;
 }
 
@@ -17,11 +77,6 @@ div.recette {
   display: inline-block;
   width: 50%;
 }
-
-ul > li {
-  margin: 10px 0;
-}
-
 .recette .arome > input {
   width: 100%;
 }
@@ -119,15 +174,12 @@ a.btn-supprimer:hover {
   .recette-button {
     display: block;
     margin: 10px 10px 30px 10px;
+    margin: 0;
   }
 
   .recette-button > a {
     display: block;
     text-align: center !important;
-  }
-
-  .recette-action {
-    margin: 0;
   }
 
   main input[type='submit'] {
@@ -163,16 +215,4 @@ a.btn-supprimer:hover {
   .btn-supprimer {
     margin-top: 20px;
   }
-}
-
-.commentaires {
-  list-style: none;
-  padding: 0;
-}
-
-.commentaires > li {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  margin: 5px;
-  padding: 10px;
 }
