--- a/views/recettes/all.pug
+++ b/views/recettes/all.pug
@@ -7,42 +7,43 @@ block content
   ul.recettes
     each recette in recettes
       li
-        .recette-container
-          div
-            a(href='/recette/' + recette._id).title
-              b #{ recette.nom }
-          div Ajoutée le #{ formatDate(recette.ajoute) }
-          span par #{ recette.auteur }
-          ul.tags
-            each hashtag in recette.hashtags
-              li
-                a.hashtag(href='/recettes/search/hashtags/' + hashtag.substr(1, hashtag.length - 1)) #{ hashtag }
-          div
-            .col-50
-              .recette-icon.pushable
-                a(no-border, href="https://twitter.com/intent/tweet?text=D%C3%A9couvrez%20la%20recette%20" + recette.nom + "%20:%20"+ recette.shortUrl)
-                  i.twitter
-                  span Tweet
-              .recette-icon.pushable
-                a(no-border, href="https://www.facebook.com/sharer/sharer.php?u=" + recette.shortUrl)
-                  i.facebook
-                  span Share               
-              if (user && user.local && recette.auteur.toString() !== user.local.pseudo.toString())
-                  .recette-icon.pushable
-                    a(no-border, href='/recette/' + recette._id + '/fork')
-                      i.fork
-                      span Fork
-            .col-50
-              .likes
-                form(method="POST", action='/recette/' + recette._id + '/like')
-                  if (user && user.local && recette.likes && recette.likes.indexOf(user.local.pseudo) === -1)
-                    input(type="button", recette-id=recette._id, csrf-token=csrfToken).like
-                  else
-                    if !user || !user.local
-                      input(type="button").unlikeable
+        .recette-card
+          .recette-container
+            div
+              a(href='/recette/' + recette._id).title
+                b #{ recette.nom }
+            div Ajoutée le #{ formatDate(recette.ajoute) }
+            span par #{ recette.auteur }
+            ul.tags
+              each hashtag in recette.hashtags
+                li
+                  a.hashtag(href='/recettes/search/hashtags/' + hashtag.substr(1, hashtag.length - 1)) #{ hashtag }
+            .recette-socials
+              .col-50
+                .recette-icon.pushable
+                  a(no-border, href="https://twitter.com/intent/tweet?text=D%C3%A9couvrez%20la%20recette%20" + recette.nom + "%20:%20"+ recette.shortUrl)
+                    i.twitter
+                    span Tweet
+                .recette-icon.pushable
+                  a(no-border, href="https://www.facebook.com/sharer/sharer.php?u=" + recette.shortUrl)
+                    i.facebook
+                    span Share               
+                if (user && user.local && recette.auteur.toString() !== user.local.pseudo.toString())
+                    .recette-icon.pushable
+                      a(no-border, href='/recette/' + recette._id + '/fork')
+                        i.fork
+                        span Fork
+              .col-50
+                .likes
+                  form(method="POST", action='/recette/' + recette._id + '/like')
+                    if (user && user.local && recette.likes && recette.likes.indexOf(user.local.pseudo) === -1)
+                      input(type="button", recette-id=recette._id, csrf-token=csrfToken).like
                     else
-                      input(type="button", recette-id=recette._id, csrf-token=csrfToken).liked
-                  span(recette-id=recette._id)=recette.likes.length
+                      if !user || !user.local
+                        input(type="button").unlikeable
+                      else
+                        input(type="button", recette-id=recette._id, csrf-token=csrfToken).liked
+                    span(recette-id=recette._id)=recette.likes.length
 
   if page > 1
     a(href="/recettes/all/" + (page - 1)) Page précédente
