--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,7 @@ h1,
 
 @media screen and (max-width: 950px) {
   :not(.drawer *) {
-    margin: 5px 0;
+    margin: 0;
     text-align: center !important;
   }
 
